# AI

./: .gitignore
Array/: Array.m  Makefile
Audio/: Record.py  Reproduce.py
Clustering/: README.md
Conditional/: Makefile
DesitionTree/: DataHandler.py  Main.py  Parameters.py  README.md  Solver.py
DimReduction/: Dataset.py  Lle.m  Lle.py  Plot3d.m  Plot3d.py  README.md  build_swiss_roll.m  get_cuadrant_colors.m  plot_swiss_roll.m
Dnn/: Activations.cpp  Activations.h  Functions.cpp  Functions.h  Loss.cpp  Loss.h  Main.cpp  Makefile  NNet.cpp  NNet.h  README.md
DualPerceptron/: Gui.py  Main.py  Parameters.py  Perceptron.py  README.md
Functions/: Function.m  Makefile
Ghostbuster/: Gui.py  Main.py  MatrixHandler.py  Model.py  Parameters.py  README.md  Solver.py  Structures.py
Hex/: Agent.py  Board.py  Main.py  Parameters.py  Player.py
Kmeans/: CudaUtilities.cpp  Kmeans.cu  Kmeans.h  Main.cpp  Makefile
Knn/: DataHandler.py  Gui.py  Knn.py  Main.py  Parameters.py  README.md  Standars.py
LinearRegression/: README.md
Loop/: For.m  While.m
ModelBased/: ModelBased.py
NaiveBayes/: DataHandler.py  Main.py  Model.py  Parameters.py  README.md  Solver.py  Standars.py
Perceptron/: DataHandler.py  Gui.py  Main.py  Parameters.py  Perceptron.py  Standars.py
Print/: Makefile
Reinforcement/: from_hugging_face.py  pyproject.toml  simulation.py  test.py  train.py
Reinforcement/lunar_lander/: README.md  eval.py  record.py  upload.py
Sampling/: README.md
Search/: README.md
Star/: Agent.py  AgentInterface.py  Gui.py  GuiStandars.py  Main.py  Random.py  (+3 more)
(+182 files in other folders)
