[project]
name = "reinforcement"
version = "0.1.0"
description = "Reinforcement learning"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium[box2d,other]>=1.2.0",
    "huggingface-hub>=0.34.4",
    "huggingface-sb3>=3.0",
    "pyvirtualdisplay>=3.0",
    "stable-baselines3>=2.7.0",
    "swig>=4.3.1.post0",
]
